PLT-7376 Fixed background colour of mobile header icons on IE11

--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -93,7 +93,7 @@
             &:hover,
             &:active,
             &:focus {
-                background: inherit;
+                background: transparent;
             }
         }
 
